force-app/main/default/objects/CC_CourseTemplate__c/CC_CourseTemplate__c.object-meta.xml
<CustomObject>
    <description>A reusable training curriculum definition from which actual course offerings are scheduled. / 実際の開講のもとになる、再利用可能な研修カリキュラムの定義。</description>
    <label>Course Template</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>