force-app/main/default/objects/CC_CourseTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details of the course content. / 研修コンテンツの説明。</description>
    <inlineHelpText>Describe the content and goals of this training. / 研修の内容・ねらいを記載してください。</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>