force-app/main/default/objects/CC_CourseTemplate__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The instructor responsible for this content. / この研修コンテンツの責任講師。</description>
    <inlineHelpText>Select the instructor in charge of this content. / 担当講師を選択してください。</inlineHelpText>
    <label>Instructor</label>
    <referenceTo>CC_Instructor__c</referenceTo>
    <relationshipLabel>Course Templates</relationshipLabel>
    <relationshipName>Course_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>