force-app/main/default/objects/CC_CourseTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this content is currently offered. / 現在有効なコンテンツかどうか。</description>
    <inlineHelpText>Check if this content is currently available for scheduling. / 現在開講可能な状態であればチェックしてください。</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>