force-app/main/default/objects/CC_CourseTemplate__c/fields/NumberOfSessions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSessions__c</fullName>
    <description>Total number of sessions in this curriculum. / このカリキュラムの全何回か。</description>
    <inlineHelpText>Enter the total number of sessions. / 全体の回数を入力してください。</inlineHelpText>
    <label>Number of Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>