force-app/main/default/objects/CC_CourseTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Instructor__c</columns>
    <columns>NumberOfSessions__c</columns>
    <columns>Rating__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>